--- a/SD_Loaner/src/GUI/GUI_Main.form
+++ b/SD_Loaner/src/GUI/GUI_Main.form
@@ -26,7 +26,7 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jlFeedback" max="32767" attributes="0"/>
+                  <Component id="jlFeedback" pref="513" max="32767" attributes="0"/>
                   <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                       <Component id="jbExit" alignment="0" max="32767" attributes="0"/>
                       <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
@@ -34,7 +34,7 @@
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="359" max="-2" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="579" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -151,6 +151,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Loans"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbCheckLoansActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
